@@ -68,6 +68,13 @@ under the License.
         <contains string="${java.vendor}" substring="IBM" casesensitive="false"/>
     </condition>
 
+    <!-- Some JDK versions are not fully supported yet
+    adjust the check here when newer JDKs are supported by newer
+    versions of spotbugs -->
+    <condition property="spotbugs.disable">
+        <equals arg1="${ant.java.version}" arg2="27"/>
+    </condition>
+
     <!-- issue warnings if source code contains unmappable characters for encoding ASCII  -->
     <property name="java.source.encoding" value="UTF-8"/>
 
@@ -249,22 +256,22 @@ under the License.
 
 
     <!-- jars in the /lib directory, see the fetch-jars target-->
-    <dependency prefix="main.commons-codec" artifact="commons-codec:commons-codec:1.21.0" usage="main"/>
+    <dependency prefix="main.commons-codec" artifact="commons-codec:commons-codec:1.22.1" usage="main"/>
     <dependency prefix="main.commons-collections4" artifact="org.apache.commons:commons-collections4:4.5.0" usage="main"/>
     <dependency prefix="main.commons-math3" artifact="org.apache.commons:commons-math3:3.6.1" usage="main"/>
     <dependency prefix="main.commons-io" artifact="commons-io:commons-io:2.22.0" usage="main"/>
     <dependency prefix="main.com.zaxxer" artifact="com.zaxxer:SparseBitSet:1.3" usage="main"/>
     <dependency prefix="main.log4j-api" artifact="org.apache.logging.log4j:log4j-api:2.26.0" usage="main"/>
 
-    <dependency prefix="main.junit-api" artifact="org.junit.jupiter:junit-jupiter-api:6.1.1" usage="main-tests"/>
-    <dependency prefix="main.junit-jengine" artifact="org.junit.jupiter:junit-jupiter-engine:6.1.1" usage="main-tests"/>
-    <dependency prefix="main.junit-params" artifact="org.junit.jupiter:junit-jupiter-params:6.1.1" usage="main-tests"/>
+    <dependency prefix="main.junit-api" artifact="org.junit.jupiter:junit-jupiter-api:6.1.3" usage="main-tests"/>
+    <dependency prefix="main.junit-jengine" artifact="org.junit.jupiter:junit-jupiter-engine:6.1.3" usage="main-tests"/>
+    <dependency prefix="main.junit-params" artifact="org.junit.jupiter:junit-jupiter-params:6.1.3" usage="main-tests"/>
     <dependency prefix="main.junit-opentest4j" artifact="org.opentest4j:opentest4j:1.2.0" usage="main-tests"/>
     <dependency prefix="main.junit-apiguardian" artifact="org.apiguardian:apiguardian-api:1.1.2" usage="main-tests"/>
-    <dependency prefix="main.junit-jspecify" artifact="org.jspecify:jspecify:1.0.0" usage="main-tests"/>
-    <dependency prefix="main.junit-pcommons" artifact="org.junit.platform:junit-platform-commons:6.1.1" usage="main-tests"/>
-    <dependency prefix="main.junit-pengine" artifact="org.junit.platform:junit-platform-engine:6.1.1" usage="main-tests"/>
-    <dependency prefix="main.junit-plauncher" artifact="org.junit.platform:junit-platform-launcher:6.1.1" usage="main-tests"/>
+    <dependency prefix="main.junit-jspecify" artifact="org.jspecify:jspecify:1.0.1" usage="main-tests"/>
+    <dependency prefix="main.junit-pcommons" artifact="org.junit.platform:junit-platform-commons:6.1.3" usage="main-tests"/>
+    <dependency prefix="main.junit-pengine" artifact="org.junit.platform:junit-platform-engine:6.1.3" usage="main-tests"/>
+    <dependency prefix="main.junit-plauncher" artifact="org.junit.platform:junit-platform-launcher:6.1.3" usage="main-tests"/>
 
 
     <dependency prefix="main.jmh" artifact="org.openjdk.jmh:jmh-core:1.35" usage="main-tests"/>
@@ -275,19 +282,19 @@ under the License.
     <dependency prefix="main.byte-buddy" artifact="net.bytebuddy:byte-buddy:1.18.10" usage="main-tests"/>
     <dependency prefix="main.byte-buddy-agent" artifact="net.bytebuddy:byte-buddy-agent:1.18.10" usage="main-tests"/>
     <dependency prefix="main.objenesis" artifact="org.objenesis:objenesis:3.1" usage="main-tests"/>
-    <dependency prefix="main.log4j-core" artifact="org.apache.logging.log4j:log4j-core:2.26.0" usage="main-tests"/>
+    <dependency prefix="main.log4j-core" artifact="org.apache.logging.log4j:log4j-core:2.26.1" usage="main-tests"/>
     <dependency prefix="main.commons-logging" artifact="commons-logging:commons-logging:1.2" usage="main-tests"/>
 
-    <dependency prefix="main.ant" artifact="org.apache.ant:ant:1.10.17" usage="excelant"/>
-    <dependency prefix="main.antlauncher" artifact="org.apache.ant:ant-launcher:1.10.17" usage="excelant"/>
+    <dependency prefix="main.ant" artifact="org.apache.ant:ant:1.10.18" usage="excelant"/>
+    <dependency prefix="main.antlauncher" artifact="org.apache.ant:ant-launcher:1.10.18" usage="excelant"/>
 
     <!-- xml signature libs - not part of the distribution -->
     <dependency prefix="dsig.xmlsec" artifact="org.apache.santuario:xmlsec:3.0.6" usage="ooxml-provided"/>
-    <dependency prefix="dsig.bouncycastle-prov" artifact="org.bouncycastle:bcprov-jdk18on:1.84" usage="ooxml-provided"/>
-    <dependency prefix="dsig.bouncycastle-pkix" artifact="org.bouncycastle:bcpkix-jdk18on:1.84" usage="ooxml-provided"/>
-    <dependency prefix="dsig.bouncycastle-util" artifact="org.bouncycastle:bcutil-jdk18on:1.84" usage="ooxml-provided"/>
+    <dependency prefix="dsig.bouncycastle-prov" artifact="org.bouncycastle:bcprov-jdk18on:1.85" usage="ooxml-provided"/>
+    <dependency prefix="dsig.bouncycastle-pkix" artifact="org.bouncycastle:bcpkix-jdk18on:1.85" usage="ooxml-provided"/>
+    <dependency prefix="dsig.bouncycastle-util" artifact="org.bouncycastle:bcutil-jdk18on:1.85" usage="ooxml-provided"/>
     <!-- only used for signing the release - not used with the ooxml signatures -->
-    <dependency prefix="dsig.bouncycastle-bcpg" artifact="org.bouncycastle:bcpg-jdk18on:1.84" usage="util"/>
+    <dependency prefix="dsig.bouncycastle-bcpg" artifact="org.bouncycastle:bcpg-jdk18on:1.85" usage="util"/>
     <dependency prefix="ooxml.test.stax2" artifact="org.codehaus.woodstox:stax2-api:4.2.1" usage="ooxml-provided"/>
 
     <!-- svg/batik/pdf libs - not part of the distribution - move batik to its own directory because of JPMS module-path issues -->
@@ -319,14 +326,14 @@ under the License.
 
     <!-- jars in the ooxml-lib directory, see the fetch-ooxml-jars target-->
     <dependency prefix="ooxml.curvesapi" artifact="com.github.virtuald:curvesapi:1.08" usage="ooxml"/>
-    <dependency prefix="ooxml.xmlbeans" artifact="org.apache.xmlbeans:xmlbeans:5.3.0" usage="ooxml"/>
+    <dependency prefix="ooxml.xmlbeans" artifact="org.apache.xmlbeans:xmlbeans:5.4.1" usage="ooxml"/>
     <dependency prefix="ooxml.commons-compress" artifact="org.apache.commons:commons-compress:1.28.0" usage="ooxml"/>
     <dependency prefix="ooxml.commons-lang3" artifact="org.apache.commons:commons-lang3:3.18.0" usage="ooxml"/>
 
     <!-- jars in the ooxml-test-lib directory, see the fetch-ooxml-jars target-->
     <dependency prefix="ooxml.test.commons-csv" artifact="org.apache.commons:commons-csv:1.14.1" usage="ooxml-tests"/>
     <dependency prefix="ooxml.test.reflections" artifact="org.reflections:reflections:0.10.2" usage="ooxml-tests"/>
-    <dependency prefix="ooxml.test.guava" artifact="com.google.guava:guava:33.4.8-jre" usage="ooxml-tests"/>
+    <dependency prefix="ooxml.test.guava" artifact="com.google.guava:guava:33.7.1-jre" usage="ooxml-tests"/>
     <dependency prefix="ooxml.test.guava.failureaccess" artifact="com.google.guava:failureaccess:1.0.3" usage="ooxml-tests"/>
     <dependency prefix="ooxml.test.javassist" artifact="org.javassist:javassist:3.27.0-GA" usage="ooxml-tests"/>
     <dependency prefix="ooxml.test.slf4j-api" artifact="org.slf4j:slf4j-api:2.0.17" usage="ooxml-tests"/>
@@ -380,7 +387,7 @@ under the License.
 
     <!-- helper jars for pgp signing, building and nexus staging -->
     <dependency prefix="dist.commons-openpgp" artifact="org.apache.commons:commons-openpgp:1.0-SNAPSHOT" usage="util"
-        repo="https://repository.apache.org/content/groups/snapshots" snapshot="1.0-20190121.221905-12"/>
+        repo="https://repository.apache.org/content/groups/snapshots" snapshot="1.0-20210121.043649-14"/>
     <dependency prefix="dist.nexus-staging" artifact="org.sonatype.nexus.ant:nexus-staging-ant-tasks:1.6.3:uber" usage="util"/>
 
     <!-- jars required for maven helper targets -->
@@ -1830,7 +1837,7 @@ under the License.
             <pathelement path="lib/ooxml-tests"/>
         </path>
 
-        <poiunit failureproperty="integration.test.failed" heap="1512" showoutput="true" jacocodest="build/jacoco-integration.exec"
+        <poiunit failureproperty="integration.test.failed" heap="3072" showoutput="true" jacocodest="build/jacoco-integration.exec"
                  modulepath-ref="test-integration.modules" module1="stress" outputDir="${integration.reports.test}">
             <zipfileset src="build/dist/maven/poi-integration/poi-integration-${version.id}.jar">
                 <include name="**/${testpattern}.class"/>
@@ -2101,8 +2108,6 @@ under the License.
             <packageset dir="${ooxml.src}" defaultexcludes="yes">
                 <include name="org/apache/poi/**"/>
             </packageset>
-
-            <arg value="--add-modules=java.xml.bind"/>
 
             <doctitle><![CDATA[<h1>POI API Documentation</h1>]]></doctitle>
             <bottom>
@@ -2550,10 +2555,19 @@ under the License.
         </forbiddenapis>
     </target>
 
+    <target name="-findbugs-check">
+        <condition property="findbugs.notRequired">
+            <or>
+                <isset property="isIBMVM"/>
+                <isset property="spotbugs.disable"/>
+            </or>
+        </condition>
+    </target>
+
     <!-- disabling findbugs until jenkins is updated to a current IBM JDK
          see https://stackoverflow.com/a/48561534/2066598
          this should be replaced by spotbugs when available in the jenkins warnings plugin -->
-    <target name="findbugs" depends="jar" unless="${isIBMVM}">
+    <target name="findbugs" depends="-findbugs-check,jar" unless="findbugs.notRequired">
         <property name="spotbugs.home" value="build/findbugs" />
         <property name="spotbugs.lib" value="/build/findbugs/lib" />
 
@@ -2775,6 +2789,9 @@ under the License.
                 <pathelement path="${dist.commons-openpgp.jar}"/>
                 <pathelement path="${dsig.bouncycastle-prov.jar}"/>
                 <pathelement path="${dsig.bouncycastle-bcpg.jar}"/>
+
+                <!-- for bcutil -->
+                <path refid="ooxml.xmlsec.classpath"/>
             </classpath>
         </taskdef>
 
